ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/EagleView_Report__c.object-meta.xml
<CustomObject>
    <label>EagleView Report</label>
    <nameField>
        <displayFormat>EVR-{0}</displayFormat>
        <label>EagleView Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EagleView Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>