ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/Changes_in_the_last_4_years__c.field-meta.xml
<CustomField>
    <fullName>Changes_in_the_last_4_years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changes in the last 4 years</label>
    <type>Checkbox</type>
</CustomField>