ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/Download_Link__c.field-meta.xml
<CustomField>
    <fullName>Download_Link__c</fullName>
    <label>Download Link</label>
    <type>Url</type>
</CustomField>