ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/Email_Lead_Admin__c.field-meta.xml
<CustomField>
    <fullName>Email_Lead_Admin__c</fullName>
    <description>Email field populated by Process Builder (with the recipient for the EagleView Report completion confirmation)</description>
    <label>Email Lead Admin</label>
    <type>Email</type>
</CustomField>