ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/Latest_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Status__c</fullName>
    <formula>CASE(TEXT(Status__c), 
&quot;1&quot;, &quot;Created&quot;,
&quot;2&quot;, &quot;In Process&quot;,
&quot;3&quot;, &quot;Pending&quot;,
&quot;4&quot;, &quot;Closed&quot;,
&quot;5&quot;, &quot;Completed&quot;,
&quot;No Status, yet&quot;
)</formula>
    <label>Latest Status</label>
    <type>Text</type>
</CustomField>