ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/Measurement_Type__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Type__c</fullName>
    <label>Measurement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>PrimaryPlusDetachedGarage</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>PrimaryStructureOnly</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AllStructuresOnParcel</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>CommercialComplex</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>