ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Residential</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>MultiFamily</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>