ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Created</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>In Process</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>