ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>29</fullName>
                <label>AddressVerified</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Canceled By Client</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Card Rejected</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>CreditCard Failure</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Customer Response</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Need To ID</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>No ID</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>No Images</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Poor Images</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Process Started</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Ready To Send</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Report Type Change</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Sent</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Site Map</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>System</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Wrong House</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Sent_</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>