ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EagleView_Report__c/recordTypes/Completed_Closed_Eagleview_Report.recordType-meta.xml
<RecordType>
    <fullName>Completed_Closed_Eagleview_Report</fullName>
    <active>true</active>
    <label>Completed/Closed Eagleview Report</label>
</RecordType>